--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,13 @@
   "env": {
     "browser": true
   },
+  "rules": {
+    "import/no-extraneous-dependencies": ["error", {
+      "devDependencies": true,
+      "optionalDependencies": false,
+      "peerDependencies": false,
+    }]
+  },
   "globals": {
     "describe": false,
     "context": false,
