Move build on `rollup` instead `webpack`

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,10 @@
     },
     "es": {
       "presets": [["es2015", { "loose": true, "modules": false }]],
+    },
+    "rollup": {
+      "presets": [["es2015", { "loose": true, "modules": false }]],
+      "plugins": ["external-helpers"]
     }
   }
 }
