--- a/package.json
+++ b/package.json
@@ -18,24 +18,25 @@
     "test:ci": "cross-env BABEL_ENV=commonjs NODE_ENV=test $(npm bin)/karma start build/karma.ci.js",
     "build:commonjs": "$(npm bin)/cross-env BABEL_ENV=commonjs $(npm bin)/babel src --out-dir lib",
     "build:es": "$(npm bin)/cross-env BABEL_ENV=es $(npm bin)/babel src --out-dir es",
-    "build:umd": "$(npm bin)/cross-env BABEL_ENV=commonjs NODE_ENV=development $(npm bin)/webpack --config=./build/webpack.release.js src/index.js dist/lighty.js",
-    "build:umd:min": "$(npm bin)/cross-env BABEL_ENV=commonjs NODE_ENV=production $(npm bin)/webpack --config=./build/webpack.release.js src/index.js dist/lighty.min.js",
+    "build:umd": "$(npm bin)/cross-env BABEL_ENV=rollup NODE_ENV=development $(npm bin)/rollup --config build/rollup.release.js",
+    "build:umd:min": "$(npm bin)/cross-env BABEL_ENV=rollup NODE_ENV=production $(npm bin)/rollup --config build/rollup.release.js",
     "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-external-helpers": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.11.6",
     "cross-env": "^2.0.0",
     "deep-equal": "^1.0.1",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
     "jasmine-core": "^2.4.1",
     "jquery": ">= 2.1.0",
     "karma": "^1.1.2",
@@ -46,6 +47,9 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "rollup": "^0.34.10",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "sinon": "^1.17.5",
     "webpack": "^1.13.2"
   }
