--- a/package.json
+++ b/package.json
@@ -46,14 +46,12 @@
     "karma-sauce-launcher": "^1.0.0",
     "karma-sinon": "^1.0.5",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.12",
     "rollup": "^0.34.10",
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^3.3.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
-    "sinon": "^1.17.5",
-    "webpack": "^1.13.2"
+    "sinon": "^1.17.5"
   }
 }
