--- a/package.json
+++ b/package.json
@@ -16,20 +16,13 @@
     "lint": "eslint src spec",
     "test": "cross-env BABEL_ENV=commonjs NODE_ENV=test BABEL_ENV=rollup $(npm bin)/karma start build/karma.local.js",
     "test:ci": "cross-env BABEL_ENV=commonjs NODE_ENV=test BABEL_ENV=rollup $(npm bin)/karma start build/karma.ci.js",
-    "build:commonjs": "$(npm bin)/cross-env BABEL_ENV=commonjs $(npm bin)/babel src --out-dir lib",
-    "build:es": "$(npm bin)/cross-env BABEL_ENV=es $(npm bin)/babel src --out-dir es",
-    "build:umd": "$(npm bin)/cross-env BABEL_ENV=rollup NODE_ENV=development $(npm bin)/rollup --config build/rollup.config.js",
-    "build:umd:min": "$(npm bin)/cross-env BABEL_ENV=rollup NODE_ENV=production $(npm bin)/rollup --config build/rollup.config.js",
+    "build:commonjs": "$(npm bin)/cross-env TARGET=commonjs $(npm bin)/rollup --config build/rollup.config.js",
+    "build:es": "$(npm bin)/cross-env TARGET=es $(npm bin)/rollup --config build/rollup.config.js",
+    "build:umd": "$(npm bin)/cross-env TARGET=umd $(npm bin)/rollup --config build/rollup.config.js",
+    "build:umd:min": "$(npm bin)/cross-env TARGET=umd NODE_ENV=production $(npm bin)/rollup --config build/rollup.config.js",
     "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-external-helpers": "^6.8.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.11.6",
     "cross-env": "^2.0.0",
     "deep-equal": "^1.0.1",
     "eslint": "^3.3.1",
@@ -48,8 +41,9 @@
     "karma-spec-reporter": "0.0.26",
     "phantomjs-prebuilt": "^2.1.12",
     "rollup": "^0.34.10",
-    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-buble": "^0.13.0",
     "rollup-plugin-commonjs": "^3.3.1",
+    "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "sinon": "^1.17.5"
