--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "lighty",
-  "description": "Modern replacement for Evil Blocks",
-  "private": true,
   "version": "0.0.1",
+  "description": "Modern replacement for Evil Blocks",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/demiazz/lighty.git"
+  },
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
