--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
     "name": "Alexey Plutalov",
     "email": "demiazz.py@gmail.com"
   },
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "jsnext:main": "es/index.js",
+  "main": "dist/lighty.js",
+  "module": "dist/lighty.es.js",
+  "jsnext:main": "dist/lighty.es.js",
   "files": [
-    "dist",
-    "lib",
-    "es",
-    "src"
+    "dist"
   ],
   "scripts": {
     "test": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js",
