--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "module": "dist/lighty.es.js",
   "jsnext:main": "dist/lighty.es.js",
   "files": [
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "test": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js",
