--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "README.md"
   ],
   "scripts": {
+    "lint": "$(npm bin)/eslint src spec",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js --single-run",
     "test:watch": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js",
     "test:ci": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.ci.js",
-    "lint": "$(npm bin)/eslint src spec",
     "build:commonjs": "$(npm bin)/cross-env TARGET=commonjs $(npm bin)/rollup --config build/rollup.config.js",
     "build:es": "$(npm bin)/cross-env TARGET=es $(npm bin)/rollup --config build/rollup.config.js",
     "build:umd": "$(npm bin)/cross-env TARGET=umd $(npm bin)/rollup --config build/rollup.config.js",
@@ -46,6 +46,8 @@
     "jasmine-core": "^2.5.2",
     "jquery": ">= 2.1.0",
     "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-rollup-plugin": "^0.2.4",
@@ -57,6 +59,7 @@
     "rollup": "^0.36.1",
     "rollup-plugin-buble": "^0.14.0",
     "rollup-plugin-commonjs": "^5.0.4",
+    "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
