--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
       "devDependencies": true,
       "optionalDependencies": false,
       "peerDependencies": false,
-    }]
+    }],
+    "no-param-reassign": 0
   },
   "globals": {
     "describe": false,
