Remove `sinon` from `.eslintrc`

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,6 @@
     "afterEach": false,
     "it": false,
     "expect": false,
-    "spyOn": false,
-    "sinon": false
+    "spyOn": false
   }
 }
