Change library concept. Rewrite code and documentation

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "afterAll": false,
     "it": false,
     "expect": false,
-    "spyOn": false
+    "spyOn": false,
+    "readyStateIsMockable": true,
   }
 }
