--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "jsnext:main": "dist/lighty.es.js",
   "files": [
     "dist",
+    "flow-typed",
     "LICENSE",
     "README.md"
   ],
@@ -35,6 +36,7 @@
     "version": "npm run build && git add -A dist && git add -A README.md"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "cross-env": "^3.1.3",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
