Use `babel` + `flow` instead of `buble`. Reconfigure build.

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,9 @@
       "imports": "always-multiline",
       "exports": "always-multiline",
       "functions": "never",
-    }]
+    }],
+    "prefer-spread": "off",
+    "prefer-rest-params": "off"
   },
   "globals": {
     "jasmine": false,
