--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
   "files": [
     "d.ts",
     "dist",
-    "flow-typed",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
-    "lint": "$(npm bin)/eslint build src spec",
-    "pretest": "npm run lint",
-    "test": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js --single-run",
-    "test:watch": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.local.js",
-    "test:ci": "cross-env NODE_ENV=test $(npm bin)/karma start build/karma.ci.js",
-    "build:dist": "node build/rollup.js",
-    "build:docs": "node build/docs.js",
-    "build": "npm run build:dist && npm run build:docs",
-    "version": "npm run build && git add -A dist && git add -A README.md"
+    "lint": "$(yarn bin)/eslint build src spec",
+    "pretest": "yarn run lint",
+    "test": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.local.js --single-run",
+    "test:watch": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.local.js",
+    "test:ci": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.ci.js",
+    "build": "node build/rollup.js",
+    "version": "yarn run build && git add -A dist"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^3.1.3",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
+    "flow-bin": "^0.43.1",
     "jasmine-core": "^2.5.2",
-    "jsdoc-to-markdown": "^2.0.1",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
@@ -57,7 +57,7 @@
     "karma-spec-reporter": "0.0.26",
     "phantomjs-prebuilt": "^2.1.13",
     "rollup": "^0.37.0",
-    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^6.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^2.0.0",
