--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "version": "yarn run build && git add -A dist"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -56,12 +59,14 @@
     "karma-sauce-launcher": "^1.1.0",
     "karma-spec-reporter": "0.0.26",
     "phantomjs-prebuilt": "^2.1.13",
+    "prettier": "^0.22.0",
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^6.0.0",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
+    "uglify-js": "^2.8.22",
     "uglify-save-license": "^0.4.1"
   }
 }
