--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test:watch": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.local.js",
     "test:ci": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.ci.js",
     "build": "node build/build.js",
-    "version": "yarn run build && git add -A lib"
+    "docs": "node build/docs.js",
+    "version": "yarn run build && git add -A dist && yarn run docs && git add -A README.md"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -56,6 +57,7 @@
     "eslint-plugin-react": "^6.7.1",
     "flow-bin": "^0.43.1",
     "jasmine-core": "^2.5.2",
+    "jsdoc-to-markdown": "^3.0.0",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
