--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   ],
   "scripts": {
     "lint": "$(yarn bin)/eslint build src spec",
-    "pretest": "yarn run lint",
+    "check": "$(yarn bin)/flow --show-all-errors src",
+    "pretest": "yarn run lint && yarn run check",
     "test": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.local.js --single-run",
     "test:watch": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.local.js",
     "test:ci": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma.ci.js",
