--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   ],
   "devDependencies": {
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
@@ -61,12 +61,12 @@
     "cross-env": "^4.0.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-config-prettier": "^1.6.0",
-    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint-config-prettier": "^1.7.0",
+    "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-prettier": "^2.0.1",
-    "flow-bin": "^0.43.1",
-    "jasmine-core": "^2.5.2",
+    "flow-bin": "^0.44.2",
+    "jasmine-core": "^2.6.1",
     "jsdoc-to-markdown": "^3.0.0",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
@@ -75,18 +75,19 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-rollup-plugin": "^0.2.4",
     "karma-sauce-launcher": "^1.1.0",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "lint-staged": "^3.4.0",
     "mkdirp": "^0.5.1",
     "phantomjs-prebuilt": "^2.1.13",
     "pre-commit": "^1.2.2",
-    "prettier": "^0.22.0",
+    "prettier": "^1.2.2",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
+    "rollup-plugin-uglify": "^1.0.2",
     "uglify-js": "^2.8.22",
     "uglify-save-license": "^0.4.1"
   }
