--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-preset-es2015": "^6.24.1",
     "chalk": "^2.0.1",
     "cross-env": "^5.0.1",
+    "documentation": "^4.0.0-rc.1",
     "eslint": "^4.3.0",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-config-prettier": "^2.3.0",
@@ -66,7 +67,6 @@
     "eslint-plugin-prettier": "^2.1.2",
     "flow-bin": "^0.51.0",
     "jasmine-core": "^2.6.4",
-    "jsdoc-to-markdown": "^3.0.0",
     "karma": "^1.7.0",
     "karma-coverage": "^1.1.1",
     "karma-coveralls": "^1.1.2",
