--- a/package.json
+++ b/package.json
@@ -16,33 +16,36 @@
     "email": "demiazz.py@gmail.com"
   },
   "main": "lib/index.js",
-  "typings": "d.ts/homey.d.ts",
+  "module": "lib-es/index.mjs",
+  "typings": "d.ts/lighty.d.ts",
   "files": [
-    "d.ts/lighty.d.ts",
-    "dist/lighty.js",
-    "dist/lighty.min.js",
-    "dist/lighty.min.js.map",
-    "lib/index.js",
-    "lib/index.js.flow",
+    "d.ts/*.ts",
+    "dist/*.js",
+    "dist/*.map",
+    "lib/*.js",
+    "lib/*.js.flow",
+    "lib-es/*.mjs",
+    "lib-es/*.mjs.flow",
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
   ],
   "scripts": {
-    "check": "$(yarn bin)/flow --show-all-errors src",
-    "pretest": "yarn run check",
-    "test": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma/local.js --single-run",
-    "test:watch": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma/local.js",
-    "test:ci": "cross-env NODE_ENV=test $(yarn bin)/karma start build/karma/ci.js",
-    "build": "node build/bundle/index.js",
-    "docs": "yarn run docs:api & yarn run docs:toc",
-    "docs:api": "node build/docs.js",
-    "docs:toc": "$(yarn bin)/doctoc --github --title '**Table of Contents**' README.md",
+    "check-types": "$(yarn bin)/brandon check-types",
+    "pretest": "yarn run check-types",
+    "test": "$(yarn bin)/brandon test",
+    "test:watch": "$(yarn bin)/brandon test --watch",
+    "test:ci": "$(yarn bin)/brandon test-ci",
+    "build": "$(yarn bin)/brandon build",
+    "docs": "$(yarn bin)/brandon documentation",
     "version": "yarn run build && yarn run docs && git add -A README.md",
     "lint-staged": "$(yarn bin)/lint-staged"
   },
   "lint-staged": {
-    "{build,spec,src}/**/*.js": [
+    "d.ts/*.ts": [
+      "prettier --write"
+    ],
+    "{spec,src}/**/*.js": [
       "prettier --write",
       "eslint",
       "git add"
@@ -52,44 +55,15 @@
     "test",
     "lint-staged"
   ],
+  "browserslist": [
+    "last 3 Chrome major versions",
+    "last 3 Firefox major versions",
+    "last 3 Edge major versions",
+    "last 3 Explorer major versions",
+    "last 3 Safari major versions",
+    "last 3 iOS major versions"
+  ],
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "chalk": "^2.0.1",
-    "cross-env": "^5.0.1",
-    "doctoc": "^1.3.0",
-    "documentation": "^4.0.0-rc.1",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-prettier": "^2.1.2",
-    "flow-bin": "^0.51.0",
-    "jasmine-core": "^2.6.4",
-    "karma": "^1.7.0",
-    "karma-coverage": "^1.1.1",
-    "karma-coveralls": "^1.1.2",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-rollup-preprocessor": "^4.0.1",
-    "karma-sauce-launcher": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "lint-staged": "^4.0.2",
-    "mkdirp": "^0.5.1",
-    "phantomjs-prebuilt": "^2.1.13",
-    "pre-commit": "^1.2.2",
-    "prettier": "^1.5.3",
-    "rollup": "^0.45.2",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-istanbul": "^1.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^2.0.1",
-    "uglify-save-license": "^0.4.1"
+    "@demiazz/brandon": "1.0.9"
   }
 }
