--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lighty",
-  "version": "0.9.0",
+  "version": "1.0.0-0",
   "description": "The tiny engine for your handy microframework",
   "license": "MIT",
   "homepage": "https://github.com/demiazz/lighty",
